# stonks

./: .gitignore  CONTEXT.md  InitialBalancestrat.md  SPEC.md  chartSetup.md  ibstrat2.md  mastery-guide-transcript.md  orb15min.md  reveersals.md  smc-indicators-plan.md  smc-mastery-guide.html  smc-quiz.html  suplydemand.md  sweepAndAuction.md  tradgin-guide-old.md  trading-guide.html
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: main.ts  style.css  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: bars.rs  lib.rs
data/: manifest.json
data/levels/: NQ-2024-08-05.json
docs/: PROJECT-STATE.md  pre-guide-convo.md
docs/adr/: 0001-tauri-shell-ts-engines-python-ingestion.md  0002-simulation-clock-authoritative-gated-bar-feed.md  0003-grading-prep-report-card-plus-ai-synthesis.md  0004-prefetch-per-day-ticks-for-fill-resolution.md  0005-event-sourced-session-records.md  (+3 more)
indicators/: fvg-premium-discount-strategy.pine  fvg-premium-discount.pine  golden-zones-strategy.pine  golden-zones.pine  key-levels-sessions-strategy.pine  key-levels-sessions.pine  order-blocks-strategy.pine  order-blocks.pine  smc-mastery-indicator.pine  smc-mastery-strategy.pine
indicators-dep/: fvg-premium-discount.pine  golden-zones-strategy.pine  key-levels-sessions-strategy.pine  mnq-test-strategy.pine  order-blocks.pine
ingestion/: export_dev_json.py  fetch_day.py  requirements.txt
transcripts/: candle-range-theory.md  fvgs.md  liquidity-sweeps.md  orb.md  order-blocks.md  top-down-analysis.md
(+23 files in other folders)
