[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
# Pure-Rust Parquet reader for the gated bar feed (ADR-0002). DuckDB comes later
# for profile queries; the feed only needs a sequential read.
anyhow = "1"
arrow = "55"
parquet = { version = "55", features = ["arrow"] }
# The grading slice (#8) calls the Anthropic Messages API server-side so the key
# never reaches the webview. rustls avoids a native OpenSSL/build dependency.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
